--- a/brief 3/style-contact.css
+++ b/brief 3/style-contact.css
@@ -25,7 +25,6 @@
     overflow: hidden;
     border: black 1px solid;
     backdrop-filter: brightness(0.5);
-
 }
 .contact-form-text{
     display: block;
@@ -59,3 +58,17 @@ textarea.contact-form-text{
 }
 
 
+.modal-bg{
+    top: 0;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 20vh;
+    background-color: rgb(0, 0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal{
+    background-color: white;
+}
